src/assets/css/style.css
/**
 * base styles and typography
 * ---------------
 */
:root {
  --blue-600: hsl(221, 83%, 53%);
  --blue-800: hsl(201, 90%, 27%);

  --teal-600: hsl(175, 84%, 32%);

  --rose-500: hsl(350, 89%, 60%);

  --radius: 3px;
}

/*******************
   Base styles
   *******************/
html {
  font-size: 62.5%;
  font-weight: 300;
  font-family: 'Roboto', Helvetica, Arial, sans-serif;
  line-height: 1.4;
}

body {
  display: flex;
  background: var(--blue-800);
  justify-content: center;
  align-items: center;
  height: 100vh;
}

img {
  aspect-ratio: 1/1;
  object-fit: contain;
}

/*******************
   Welcome Sections
   *******************/
.welcome {
  padding: 0 1em;
  display: grid;
  grid-template-rows: 1fr 3fr;
  grid-template-areas:
    'w-header'
    'w-body';
}

.welcome-header {
  grid-area: w-header;
}

.welcome-header > img {
  aspect-ratio: 5/1;
  width: min(60rem, 100%);
  margin: 0 auto;
}

.welcome-body {
  grid-area: w-body;
  display: flex;
  justify-content: center;
  align-items: center;
}

#form-player {
  display: flex;
  align-items: center;
  gap: 3rem;
  flex-direction: column;
}

.form-action {
  font-size: 2.5rem;
  line-height: 2.4;
  font-weight: 500;
  color: hsl(0, 0%, 100%);
  display: flex;
  gap: 0.5rem;
  flex-direction: column;
  align-items: center;
}

.form-action > input[type='text'] {
  padding: 0.2em 0.8em;
  border-radius: var(--radius);
  color: hsla(0, 0%, 0%, 0.486);
}

.form-message {
  font-size: 2rem;
  line-height: 1.6rem;
  padding: 4px 0 0;
  color: var(--rose-500);
}

.form-action > button[type='submit'] {
  background-color: hsl(0, 0%, 100%);
  color: var(--blue-600);
  cursor: pointer;
  border-radius: var(--radius);
}

.form-action > button[type='submit']:hover {
  background-color: var(--blue-600);
  color: hsl(0, 0%, 100%);
}

/* place-ship */
.place-ship {
  padding: 0.8em;
  width: min(60rem, 100%);
  height: 90vh;
  display: grid;
  gap: 1rem;
  grid-template-rows: 1fr 4fr 1fr;
}

.place-ship-action {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  gap: 3em;
}

.command {
  font-size: clamp(3vw, 4rem, 5vw);
  line-height: 1rem;
  font-weight: 500;
  color: hsl(0, 0%, 100%);
}

.change-dir {
  background-color: hsl(0, 0%, 100%);
  color: var(--blue-600);
  cursor: pointer;
  border-radius: var(--radius);
  padding: 1em 2em;
}

.change-dir > * {
  font-size: 2rem;
  font-weight: 500;
}

.change-dir:hover {
  background-color: var(--blue-600);
  color: hsl(0, 0%, 100%);
}

.grid {
  display: grid;
  gap: 3px;
  grid-template-columns: repeat(10, 1fr);
  grid-template-areas:
    'A0 B0 C0 D0 E0 F0 G0 H0 I0 J0'
    'A1 B1 C1 D1 E1 F1 G1 H1 I1 J1'
    'A2 B2 C2 D2 E2 F2 G2 H2 I2 J2'
    'A3 B3 C3 D3 E3 F3 G3 H3 I3 J3'
    'A4 B4 C4 D4 E4 F4 G4 H4 I4 J4'
    'A5 B5 C5 D5 E5 F5 G5 H5 I5 J5'
    'A6 B6 C6 D6 E6 F6 G6 H6 I6 J6'
    'A7 B7 C7 D7 E7 F7 G7 H7 I7 J7'
    'A8 B8 C8 D8 E8 F8 G8 H8 I8 J8'
    'A9 B9 C9 D9 E9 F9 G9 H9 I9 J9';
}

.cell {
  aspect-ratio: 1/1;
  object-fit: contain;
  cursor: pointer;
  border: 2px solid hsl(0, 0%, 100%);
  display: flex;
  justify-content: center;
  align-items: center;
}

.cell > img {
  aspect-ratio: 1/1;
  width: 50%;
}

.place-ship-footer {
  margin-left: auto;
}

.next-phase {
  font-size: 1.4rem;
  font-weight: 400;
  background-color: hsl(0, 0%, 100%);
  color: var(--blue-600);
  cursor: pointer;
  border-radius: var(--radius);
  padding: 1rem 2rem;
}

.next-phase:hover {
  background-color: var(--blue-600);
  color: hsl(0, 0%, 100%);
}

.play-ground {
  padding: 0.8em;
  width: 80vw;
  display: flex;
  gap: 2em;
  flex-direction: column;
}

.play-status {
  width: min(60rem, 100%);
  margin: 0 auto;
  background: linear-gradient(
    90deg,
    rgb(55, 55, 55) 0%,
    rgb(41, 41, 41) 29%,
    rgb(41, 41, 41) 76%,
    rgb(56, 56, 56) 100%
  );
  border: 1px solid rgb(221, 221, 221);
  border-radius: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.play-status > p {
  padding: 1em;
  font-size: clamp(1.5vw, 3ch, 2vw);
  font-weight: 500;
  color: hsl(0, 0%, 100%);
}

.play-grid {
  display: grid;
  gap: 2em;
  grid-template-columns: repeat(2, 1fr);
}

.play-grid .title {
  width: max-content;
  margin: 0 auto;
  font-size: 2.5rem;
  font-weight: 500;
  color: hsl(0, 0%, 100%);
}

.modal {
  /* padding: 1em; */
  /* width: min(50ch, 100%); */
  width: 60vw;
  height: 20vh;
  border: 0;
  border-radius: 3px;
  box-shadow: 0 0 1em rgba(0, 0, 0, 0.3);
  background-color: var(--blue-600);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.5em;
}

.modal-info {
  color: hsl(0, 0%, 100%);
  font-size: 4rem;
  font-weight: 500;
}

.btn {
  border-radius: 3px;
  color: var(--blue-600);
  background-color: hsl(0, 0%, 100%);
  font-size: 1.8rem;
  font-weight: 500;
  cursor: pointer;
}

.btn:hover {
  background-color: var(--blue-600);
  color: hsl(0, 0%, 100%);
}

.modal::backdrop {
  background-color: hsl(0, 0%, 0%, 0.5);
}

.disabled {
  display: none;
}

